// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expr literal bit string 1`] = `
{
  "prefix": null,
  "text": "b'011001'",
  "type": "string",
}
`;

exports[`expr literal bit string 2`] = `
{
  "prefix": "_binary",
  "text": "b'011001'",
  "type": "string",
}
`;

exports[`expr literal boolean 1`] = `
{
  "text": "true",
  "type": "bool",
}
`;

exports[`expr literal boolean 2`] = `
{
  "text": "TRUE",
  "type": "bool",
}
`;

exports[`expr literal boolean 3`] = `
{
  "text": "false",
  "type": "bool",
}
`;

exports[`expr literal boolean 4`] = `
{
  "text": "FALSE",
  "type": "bool",
}
`;

exports[`expr literal double-quoted string 1`] = `
{
  "text": ""hello"",
  "type": "string",
}
`;

exports[`expr literal hex literal 1`] = `
{
  "prefix": null,
  "text": "0xAAFF11",
  "type": "string",
}
`;

exports[`expr literal hex literal 2`] = `
{
  "prefix": "_binary",
  "text": "0xAAFF11",
  "type": "string",
}
`;

exports[`expr literal hex string 1`] = `
{
  "prefix": null,
  "text": "x'AFC123'",
  "type": "string",
}
`;

exports[`expr literal hex string 2`] = `
{
  "prefix": "_binary",
  "text": "x'AFC123'",
  "type": "string",
}
`;

exports[`expr literal single-quoted string 1`] = `
{
  "text": "'hello'",
  "type": "string",
}
`;
